--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-router": "^7.1.5",
+    "react-router-dom": "^7.1.5",
+    "react-simple-typewriter": "^5.0.1",
     "tailwindcss": "^4.0.4"
   },
   "devDependencies": {
